# sample_cicd

./: CMakeLists.txt  README.md  dir_fbc1791542cb9bdd43896d2fec16cb38.html  dir_fc073931f967541a8921239756d3ec89.html  files.html  globals.html  globals_func.html  index.html  sum_8cpp.html  sum_8h.html  sum_8h_source.html
.github/workflows/: build_test_benchmark.yaml  doxygen.yaml
benchmark/: CMakeLists.txt  benchmark.cpp
docs/: Doxyfile
main/: CMakeLists.txt  main.cpp
search/: all_0.js  files_0.js  functions_0.js  pages_0.js
sum/: CMakeLists.txt  sum.cpp
sum/include/: sum.h
test/: CMakeLists.txt  test.cpp
